 2011-05-12 14:51  dimitr 
   M src/dsql/dsql.cpp
Fixed CORE-3477: Passing non-existing SQL parameters always crash server.

 2011-05-12 09:37  dimitr 
   M src/jrd/TempSpace.cpp
   M src/jrd/TempSpace.h
   M src/jrd/rse.cpp
   M src/jrd/sort.cpp
Reduced memory usage for CORE-3457: Optimize the temporary space manager regarding small chunk allocations.

 2011-05-12 08:34  dimitr 
   M src/dsql/dsql.h
   M src/dsql/pass1.cpp
Rolled back the patch for CORE-2812 (Prohibit any improper mixture of explicit and implicit joins) because of being too radical for the point release and because of the found issues that require further investigation. The proper solution will be developed for v3.0 only.
This fixes the related regressions CORE-3395 and CORE-3474 reported against v2.5.1.

 2011-05-10 13:29  mapopa 
   M src/jrd/common.h
   M src/jrd/pag.cpp
Description:fix big-endian mips detection It seems big-endian MIPS defines "MIPSEB" 
Author: Damyan Ivanov <dmn@debian.org>
Debian bug: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=474773

 2011-05-10 13:15  mapopa 
   M src/common/classes/fb_atomic.h
 Description: ensure atomic_ops.h defined AO_REQUIRE_CAS in order to ensure
 that AO_compare_and_swap is available even if emulated.
 This would give poor performance on platforms where no native implementation
 is available, but at least it gives some chance of running Firebird
 Author: Damyan Ivanov <dmn@debian.org>
 Debian-Bug: 565861 http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=565861

 2011-05-10 11:53  mapopa 
   M autogen.sh
 From: Damyan Ivanov <dmn@debian.org>
 Description: add workarounds for libtool before 2.2.6a
 This makes it possible to build Firebird 2.5 on Debian Lenny and other
 distributions that dont have libtool 2.2.6a available

 2011-05-10 10:00  mapopa 
   M builds/posix/prefix.linux_powerpc
remove -mcpu=powerpc from cflags on powerpc
-mcpu=powerpc assumes certain powerpc and will create wrong code if the